# bang

./: CLAUDE.md  CMakeLists.txt  README.md  conanfile.py  index.md  run.zsh
docs/: README.md
docs/linking_understanding/: README.md  chatgpt-qa-linking-phases.md  claude-code-qa-linking-stages.md  claude-code-qa-macos-vs-linux-commands.md
src/: bang.cpp  bang.h  main.cpp
src/test/: test_atomics.cpp  test_fixtures.cpp  test_fixtures.hpp  test_integrations.cpp  test_runner.cpp  test_runner.hpp
test_package/: conanfile.py
